--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
   <!--<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.1.3/socket.io.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.4.1/socket.io.js"></script>-->
   <script type="text/javascript" charset="utf-8">
-    var socket = io();
+    var socket = io.connect("https://sbhs-platform.herokuapp.com/sbhs");
     socket.on('connect', function() {
       socket.emit('join_room', {username: 'hi', room: 'room1'});
       const newMode = document.createElement("div");
