--- a/templates/index.html
+++ b/templates/index.html
@@ -35,9 +35,11 @@
   <!--<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.1.3/socket.io.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.4.1/socket.io.js"></script>-->
   <script type="text/javascript" charset="utf-8">
-    var socket = io.connect("https://sbhs-platform.herokuapp.com/sbhs");
+    var socket = io();
     socket.on('connect', function() {
       socket.emit('join_room', {username: 'bob', room: '1'});
+      
+      
       const newMode = document.createElement("div");
       newMode.innerHTML = "uhgyt joined";
       document.getElementById("chat").appendChild(newMode);
