--- a/static/style.css
+++ b/static/style.css
@@ -39,33 +39,38 @@ img { /* make images and create button undraggable */
 
 #profile {
   display: inline-block;
-  width: 170px;
-  height: 36px;
+  width: 200px;
+  height: 50px;
   margin-left: 40px;
-  margin-top: 7px;
   border-radius: 2px;
   border: 1px solid #dadce0;
+  overflow: hidden;
 }
 #profile_picture {
   display: inline-block;
-  width: 20px;
-  height: 20px;
+  width: 37px;
+  height: 37px;
   border-radius: 50%;
+  margin-top: 5px;
+  margin-left: 10px;
 }
 /* add a min width and responsive thing to spaces */
 /* Some math is needed for the width responsiveness; take 1 - percentage of the profile pixels*/
 #spaces {/* arrow key rolling between each space shown below */
   display: inline-block;
-  width: 62%;
-  min-width: 100px;
-  height: 36px;
-  margin-left: 70px;
-  margin-top: 7px;
+  float: right;
+  margin-right: 100px;
+  width: 900px;
+  margin-left: 20px;
+  height: 42px;
   border-radius: 2px;
   border: 1px solid #dadce0;
+  overflow: hidden;
+  padding-bottom: 100%;
+  margin-bottom: -100%;
 }
 #create {
-  width: 36px;
-  height: 36px;
+  width: 40px;
+  height: 40px;
   float: right;
 }
