--- a/static/style.css
+++ b/static/style.css
@@ -39,7 +39,7 @@ img { /* make images and create button undraggable */
 
 #profile {
   display: inline-block;
-  width: 200px;
+  width: 220px;
   height: 50px;
   margin-left: 40px;
   border-radius: 2px;
@@ -58,16 +58,12 @@ img { /* make images and create button undraggable */
 /* Some math is needed for the width responsiveness; take 1 - percentage of the profile pixels*/
 #spaces {/* arrow key rolling between each space shown below */
   display: inline-block;
-  float: right;
-  margin-right: 100px;
-  width: 900px;
+  width: 68%;
+  min-width: 200px;
   margin-left: 20px;
-  height: 42px;
+  height: 50px;
   border-radius: 2px;
   border: 1px solid #dadce0;
-  overflow: hidden;
-  padding-bottom: 100%;
-  margin-bottom: -100%;
 }
 #create {
   width: 40px;
